--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <nav class="navbar navbar-dark bg-black fixed" aria-label="Fifth navbar example">
     <div class="container-fluid">
-      <div class="navbar-brand-container"><a class="navbar-brand" href="/">Banán</a></div>
+      <div class="navbar-brand-container"><a class="navbar-brand" href="/"><img src="./static/assets/bananas-icon.png" width="25" height="auto">Banán</a></div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFunction" aria-controls="navbarsFunction" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarsFunction">
+        <div class="collapse navbar-collapse" id="navbarsFunction">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/" id="Domu-link">Domů</a>
@@ -125,7 +125,7 @@
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <img src="./static/assets/bananas-icon.png" class="bananas-icon">
+        <img src="./static/assets/bananas-icon.png" width="25" height="auto" class="bananas-icon">
       </a>
       <span id="footer-text">© 2024 Miloš Beránek</span>
     </div>
