--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </a>
       <span id="footer-text">© 2024 Miloš Beránek</span>
     </div>
-
+    <div class="container" style="width: fit-content; text-align: center;"><img src="./static/assets/kevii-logo (1).png" height="auto" width="60"></div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/milos.beranek/"><img width="20" height="20" src="./static/assets/instagram.png" alt="ikona instagramu"></a></li>
     </ul>
