tried adding my logo but somehow succeded in doing so then now the image isn't loading

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <img src="./static/assets/bananas-icon.png" width="25" height="auto" class="bananas-icon">
+        <img src="./static/assets/bananas-icon.png" width="25" height="auto" class="bananas-icon" loading="eager" decoding="async">
       </a>
       <span id="footer-text">© 2024 Miloš Beránek</span>
     </div>
-    <div class="container" style="width: fit-content; text-align: center;"><img src="./static/assets/kevii-logo (1).png" height="auto" width="60"></div>
+    <div class="container-fluid" style="width: fit-content; text-align: center;"><img src=".static/assets/kevii-logo-(2)(outline-fix).png" height="auto" width="100%" loading="eager" decoding="async"></div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/milos.beranek/"><img width="20" height="20" src="./static/assets/instagram.png" alt="ikona instagramu"></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/milos.beranek/"><img width="20" height="20" src="./static/assets/instagram.png" alt="ikona instagramu" loading="eager" decoding="async"></a></li>
     </ul>
   </footer>
 </div>
