Successfully added my log in the footer.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </a>
       <span id="footer-text">© 2024 Miloš Beránek</span>
     </div>
-    <div class="container-fluid" style="width: fit-content; text-align: center;"><img src=".static/assets/kevii-logo-(2)(outline-fix).png" height="auto" width="100%" loading="eager" decoding="async"></div>
+    <div class="k-g-logo col-md-4" style="width: fit-content; height: fit-content; text-align: center;"><img src="./static/assets/k-g-logo(gold).png" height="auto" width="40%" loading="eager" decoding="async"></div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/milos.beranek/"><img width="20" height="20" src="./static/assets/instagram.png" alt="ikona instagramu" loading="eager" decoding="async"></a></li>
     </ul>
