--- a/index.html
+++ b/index.html
@@ -125,13 +125,12 @@
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <img src="./static/assets/bananas-icon.png" width="25" height="auto" class="bananas-icon" loading="eager" decoding="async">
-      </a>
-      <span id="footer-text">© 2024 Miloš Beránek</span>
+        <img src="./static/assets/bananas-icon.png" width="23" height="auto" class="bananas-icon" loading="eager" decoding="async">
+      <span id="footer-text">© 2024 Miloš Beránek</span></a>
     </div>
-    <div class="k-g-logo col-md-4" style="width: fit-content; height: fit-content; text-align: center;"><img src="./static/assets/k-g-logo(gold).png" height="auto" width="40%" loading="eager" decoding="async"></div>
+    <div class="k-g-logo col-md-4 align-items-center" style="width: fit-content; height: fit-content; text-align: center;"><img src="./static/assets/k-g-logo(gold).png" height="auto" width="38%" loading="eager" decoding="async" alt="logo tvůrce webové stránky"></div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/milos.beranek/"><img width="20" height="20" src="./static/assets/instagram.png" alt="ikona instagramu" loading="eager" decoding="async"></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/milos.beranek/"><img width="18" height="auto" src="./static/assets/instagram.png" alt="ikona instagramu" loading="eager" decoding="async"></a></li>
     </ul>
   </footer>
 </div>
