text update.(grammar)

--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
           <div class="overlay">
             <h1>Trénink techniky</h1>
             <p class="normal-text">Trénink zaměřený převážně na koordinaci pohybu: správné přenášení váhy při úderech, rovnováha, pohyb apod.
-              Na závěr 15 minut kardio</p>
+              Na závěr 15 minut kardio.</p>
               <p class="hover-text hidden">Tento trénink se zaměřuje na osvojení a zdokonalení základů boxerské techniky.
-                <br>Hlavním cílem je zlepšit koordinaci pohybu, s důrazem na správné přenášení váhy při úderech,
-                <br>udržení rovnováhy a plynulost pohybu. Na závěr hodiny je zařazeno 15 minut kardia,
-                <br>které doplní trénink a zlepší fyzickou kondici.</p>
+                <br>Hlavním cílem je zlepšit koordinaci pohybu, s důrazem na správné přenášení váhy při úderech, udržení rovnováhy a plynulost pohybu.
+                <br>Na závěr hodiny je zařazeno 15 minut kardia, které doplní trénink a zlepší fyzickou kondici.</p>
           </div>
         </div>
         <div class="image-item">
@@ -101,7 +100,7 @@
             <p class="hover-text hidden">Vyvážený box kombinuje technický trénink s kondiční přípravou.
               <br>Prvních 30 minut je věnováno zdokonalování techniky, kde se zaměřujeme na přesnost a plynulost pohybu.
               <br>Druhá polovina tréninku pak zahrnuje 30 minut kardia a kondičních cvičení,
-              <br>které podporují vytrvalost a zlepšují fyzickou zdatnost</p>
+              <br>které podporují vytrvalost a zlepšují fyzickou zdatnost.</p>
           </div>
         </div>
         <div class="image-item">
@@ -111,8 +110,8 @@
             <p class="normal-text">Trénink s vysokou intenzitou a pokročilými technikami, určený pro ty, kdo se připravují na zápasy nebo o nich uvažují.</p>
             <p class="hover-text hidden">Tento trénink je určen pro ty, kteří mají ambice zápasit nebo se již závodnímu boxu věnují.
               <br>Tréninky jsou vedeny s vysokou intenzitou a zaměřeny na pokročilé techniky.
-              <br>Součástí je i příprava na reálné zápasové situace, rozvoj rychlosti,
-              <br>síly a odolnosti, které jsou v ringu klíčové.</p>
+              <br>Součástí je i příprava na reálné zápasové situace, rozvoj rychlosti, síly a odolnosti,
+              <br>které jsou v ringu klíčové.</p>
           </div>
         </div>
       </div>
