updated toggle-button-1 to always be active on load; along with minor adjusts to both cta-buttons box-shadow.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h1>Miloš Beránek</h1>
       <h2>boxujete, nebo chcete začít?</h2>
       <div class="button-container">
-        <button id="O-mne-toggler-1">1.</button>
+        <button class="active" id="O-mne-toggler-1">1.</button>
         <button id="O-mne-toggler-2">2.</button>
       </div>
       <div id="toggle-1"><p>Jmenuji se Miloš Beránek, ale všichni mi říkají "Banán."<br>
