Deleted initial silhouette to include a silhouette of banan to malke the webpage more personal

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
     <div class="divider">
-        <img src="static/assets/male-silhouette-150x150-removebg-preview.png" alt="male-silhouette-showing-muscles">
+        <img src="static/assets/banan-silhouette (1).png" loading="eager" decoding="async" alt="silueta banán">
     </div>
 
     <section class="O-mne" id="O-mne">
