updates to the sluzby section; box-shadow around the phots as well as the alignment of the h1 tags so they don't shift on hover. Deletion of the first paragrapghs and also update on the cta button.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p>Čau, já jsem Banán a udělám z tebe vítěze v boxerském ringu.<br>
             Zarezervuj si trénink a přijď ukázat, co v tobě je.</p>
         </div>
-        <a href="https://www.instagram.com/direct/t/117254859668748" class="cta-button">chci své místo</a>
+        <a href="https://www.instagram.com/direct/t/117254859668748" class="cta-button">Napiš mi!</a>
       </div>
 
     <div class="divider">
@@ -83,10 +83,8 @@
       <div class="image-container">
         <div class="image-item">
           <img src="./static/assets/DSC00501.jpg" loading="eager" decoding="async" alt="fotografie banán v tělocvičně dělá dvojité údery pažemi s bojovými lany">
+          <h1>Trénink techniky</h1>
           <div class="overlay">
-            <h1>Trénink techniky</h1>
-            <p class="normal-text">Trénink zaměřený převážně na koordinaci pohybu: správné přenášení váhy při úderech, rovnováha, pohyb apod.
-              Na závěr 15 minut kardio.</p>
               <p class="hover-text hidden">Tento trénink se zaměřuje na osvojení a zdokonalení základů boxerské techniky.
                 <br>Hlavním cílem je zlepšit koordinaci pohybu, s důrazem na správné přenášení váhy při úderech, udržení rovnováhy a plynulost pohybu.
                 <br>Na závěr hodiny je zařazeno 15 minut kardia, které doplní trénink a zlepší fyzickou kondici.</p>
@@ -94,9 +92,8 @@
         </div>
         <div class="image-item">
           <img src="./static/assets/DSC00348.jpg" loading="eager" decoding="async" alt="fotografie banán v tělocvičně při práci s boxovacím pytlem">
+          <h1>Vyvážený trénink</h1>
           <div class="overlay">
-            <h1>Vyvážený trénink</h1>
-            <p class="normal-text">Obsahuje stejné technické prvky, ale s větším důrazem na kondici – 30 minut techniky a 30 minut kardia.</p>
             <p class="hover-text hidden">Vyvážený box kombinuje technický trénink s kondiční přípravou.
               <br>Prvních 30 minut je věnováno zdokonalování techniky, kde se zaměřujeme na přesnost a plynulost pohybu.
               <br>Druhá polovina tréninku pak zahrnuje 30 minut kardia a kondičních cvičení,
@@ -105,9 +102,8 @@
         </div>
         <div class="image-item">
           <img src="./static/assets/DSC00410.jpg" loading="eager" decoding="async" alt="fotografie banán v tělocvičně dělá mrtvé tahy">
+          <h1>Trénink pro závodníky</h1>
           <div class="overlay">
-            <h1>Trénink pro závodníky</h1>
-            <p class="normal-text">Trénink s vysokou intenzitou a pokročilými technikami, určený pro ty, kdo se připravují na zápasy nebo o nich uvažují.</p>
             <p class="hover-text hidden">Tento trénink je určen pro ty, kteří mají ambice zápasit nebo se již závodnímu boxu věnují.
               <br>Tréninky jsou vedeny s vysokou intenzitou a zaměřeny na pokročilé techniky.
               <br>Součástí je i příprava na reálné zápasové situace, rozvoj rychlosti, síly a odolnosti,
@@ -116,7 +112,7 @@
         </div>
       </div>
     </section>
-    <div class="cta-div-2"><a href="https://www.instagram.com/direct/t/117254859668748" class="cta-button-2">chci své místo</a></div>
+    <div class="cta-div-2"><a href="https://www.instagram.com/direct/t/117254859668748" class="cta-button-2">Napiš mi!</a></div>
 </body>
 
 <div class="container-fluid-footer">
