added a contact section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#Sluzby" id="Sluzby-link">Služby</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com/direct/t/117254859668748" id="Kontakt-link">Kontakt</a>
+                    <a class="nav-link" href="#Kontakt" id="Kontakt-link">Kontakt</a>
                 </li>
             </ul>
         </div>
@@ -112,7 +112,22 @@
         </div>
       </div>
     </section>
-    <div class="cta-div-2"><a href="https://www.instagram.com/direct/t/117254859668748" class="cta-button-2">Napiš mi!</a></div>
+
+    <div class="divider-3"></div>
+
+    <section class="Kontakt" id="Kontakt">
+      <h1>Kontakt</h1>
+    <div class="button-grid">
+      <div class="mailto-div">
+        <a class="mailto-button" href="mailto:">poslat email</a>
+      </div>
+      <div class="instagram-div">
+        <a class="instagram-button" href="https://www.instagram.com/direct/t/117254859668748">přímou zprávu</a>
+      </div>
+    </div>
+    </section>
+
+    
 </body>
 
 <div class="container-fluid-footer">
