--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
 
 <body class="body">
 
-  <nav class="navbar navbar-dark bg-black fixed" aria-label="Fifth navbar example">
+
+  <nav class="navbar navbar-dark bg-black" aria-label="Offcanvas navbar large">
+    <div class="container-fluid">
+      <div class="navbar-brand-container"><a class="navbar-brand" href="/"><img src="./static/assets/bananas-icon.png" width="25" height="auto">Banán</a></div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-dark bg-black" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><a class="navbar-brand" href="/"><img src="./static/assets/bananas-icon.png" width="25" height="auto">Banán</a></h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/" id="Domu-link">Domů</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#O-mne" id="O-mne-link">O mně</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Sluzby" id="Sluzby-link">Služby</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#Kontakt" id="Kontakt-link">Kontakt</a>
+          </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- <nav class="navbar navbar-dark bg-black fixed" aria-label="Fifth navbar example">
     <div class="container-fluid">
       <div class="navbar-brand-container"><a class="navbar-brand" href="/"><img src="./static/assets/bananas-icon.png" width="25" height="auto">Banán</a></div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFunction" aria-controls="navbarsFunction" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +67,7 @@
             </ul>
         </div>
     </div>
-  </nav>
+  </nav> -->
 
       <div class="header">
         <div class="header-image-container"><img src="./static/assets/DSC00597.jpg" loading="eager" decoding="async" alt="fotografie banán v tělocvičně házení rány s činkami v obou rukou."></div>
@@ -117,6 +149,7 @@
 
     <section class="Kontakt" id="Kontakt">
       <h1>Kontakt</h1>
+      <p>v případě dotazů nebo rezervací se neváhejte obrátit na kteroukoli metodu.</p>
     <div class="button-grid">
       <div class="mailto-div">
         <a class="mailto-button" href="mailto:">poslat email</a>
