Adjustment of font-size in navbar and typo in achievements text

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <li>Profesionální boxer s bilancí 14W-3L-1D.</li>
           <li>Držitel českého profesionálního pásu ve váze super welter.</li>
           <li>Šestinásobný amaterský mistr ČR s bilancí 125W-25L.</li>
-          <li>Účastník mistrovsktví světa a evropy.</li>
+          <li>Účastník mistrovství světa a evropy.</li>
         </ul>
       </div>
     </section>
